manifests/jupyterhub-0.1.19.tgz-manifest.yaml
---
# Source: jupyterhub/templates/hub/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
  name: my-release-jupyterhub-hub
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: hub
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Pods with label "hub.jupyter.org/network-access-hub" --> Hub
    - ports:
        - port: 8081
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-hub: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-hub: "true"
  egress:
    # Hub --> Proxy API
    - ports:
        - port: 8001
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/component: proxy
    # Hub --> Single User
    - ports:
        - port: 8888
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/component: singleuser
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    ## PostgreSQL access
    - ports:
        - protocol: UDP
          port: 5432
        - protocol: TCP
          port: 5432
    ## Hub --> Any IP:PORT
    ##
    - to:
---
# Source: jupyterhub/templates/proxy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  name: my-release-jupyterhub-proxy
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: proxy
  policyTypes:
    - Ingress
    - Egress
  ingress:
    ## Any IP --> Proxy
    ##
    - ports:
        - port: 8000
    
    # Pods with label "hub.jupyter.org/network-access-proxy-api" --> Proxy API
    - ports:
        - port: 8001
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-proxy-api: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-proxy-api: "true"
  egress:
    # Proxy --> Hub
    - ports:
        - port: 8081
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/component: hub
    # Proxy --> Single User
    - ports:
        - port: 8888
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/component: singleuser
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
---
# Source: jupyterhub/templates/singleuser/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: singleuser
  name: my-release-jupyterhub-singleuser
  namespace: "default"
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: singleuser
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Pods with label "hub.jupyter.org/network-access-singleuser" --> Single User
    - ports:
        - port: 8888
      from:
        - podSelector:
            matchLabels:
              hub.jupyter.org/network-access-singleuser: "true"
          namespaceSelector:
            matchLabels: {}
        - namespaceSelector:
            matchLabels:
              hub.jupyter.org/network-access-singleuser: "true"
  egress:
    # Single User --> Hub
    - ports:
        - port: 8081
      to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: jupyterhub
              app.kubernetes.io/instance: my-release
              app.kubernetes.io/component: hub
    ## Limit access to the Cloud Metadata API
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 169.254.169.254/32
    ## DNS access
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    ## PostgreSQL access
    - ports:
        - protocol: UDP
          port: 5432
        - protocol: TCP
          port: 5432
---
# Source: jupyterhub/charts/postgresql/templates/svc-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql-headless
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.12.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    # Use this annotation in addition to the actual publishNotReadyAddresses
    # field below because the annotation will stop being respected soon but the
    # field is broken in some versions of Kubernetes:
    # https://github.com/kubernetes/kubernetes/issues/58662
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
  namespace: default
spec:
  type: ClusterIP
  clusterIP: None
  # We want all pods in the StatefulSet to have their addresses published for
  # the sake of the other Postgresql pods even before they're ready, since they
  # have to be able to talk to each other in order to become ready.
  publishNotReadyAddresses: true
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: my-release
---
# Source: jupyterhub/charts/postgresql/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-release-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.12.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
  annotations:
  namespace: default
spec:
  type: ClusterIP
  ports:
    - name: tcp-postgresql
      port: 5432
      targetPort: tcp-postgresql
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: my-release
    role: primary
---
# Source: jupyterhub/templates/hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
  name: my-release-jupyterhub-hub
  namespace: "default"
spec:
  type: ClusterIP
  
  ports:
    - name: http
      port: 8081
      targetPort: http
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: hub
---
# Source: jupyterhub/templates/proxy/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  name: my-release-jupyterhub-proxy-api
  namespace: "default"
spec:
  type: ClusterIP
  
  ports:
    - name: http
      port: 8001
      targetPort: api
      protocol: TCP
      nodePort: null
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: proxy
---
# Source: jupyterhub/templates/proxy/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  name: my-release-jupyterhub-proxy-public
  namespace: "default"
spec:
  type: LoadBalancer
  externalTrafficPolicy: "Cluster"
  
  loadBalancerSourceRanges: []
  
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: jupyterhub
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/component: proxy
---
# Source: jupyterhub/templates/image-puller/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: image-puller
  name: my-release-jupyterhub-image-puller
  namespace: "default"
spec:
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: image-puller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-0.1.19
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: image-puller
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: image-puller
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: pause
          image: docker.io/bitnami/bitnami-shell:10-debian-10-r202
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /bin/sh
            - -c
            - sleep infinity
          resources:
            limits: {}
            requests: {}
---
# Source: jupyterhub/templates/hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: hub
  name: my-release-jupyterhub-hub
  namespace: "default"
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: hub
  template:
    metadata:
      annotations:
        checksum/hub-config: 18cdd859625557ec34dbd28c1ac01b2a360eaa28f0f5b0ffdf940944f43668b7
        checksum/hub-secret: fb7047d9eb4a94671d102146366d013301db32751776ff9494c992eb4bae2b81
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-0.1.19
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: hub
        hub.jupyter.org/network-access-proxy-api: "true"
        hub.jupyter.org/network-access-proxy-http: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      serviceAccountName: my-release-jupyterhub-hub
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: hub
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: hub
          image: docker.io/bitnami/jupyterhub:1.4.2-debian-10-r65
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
          command:
            - jupyterhub
          args:
            - --config
            - /etc/jupyterhub/jupyterhub_config.py
            - --upgrade-db
          ports:
            - name: http
              containerPort: 8081
          resources:
            limits: {}
            requests: {}
          startupProbe:
            httpGet:
              path: /hub/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
            successThreshold: 1
          livenessProbe:
            httpGet:
              path: /hub/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /hub/health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 30
            successThreshold: 1
          volumeMounts:
            - mountPath: /etc/jupyterhub/jupyterhub_config.py
              subPath: jupyterhub_config.py
              name: config
            - mountPath: /etc/jupyterhub/z2jh.py
              subPath: z2jh.py
              name: config
            - mountPath: /etc/jupyterhub/secret/
              name: secret
      volumes:
        - name: config
          configMap:
            name: my-release-jupyterhub-hub
        - name: secret
          secret:
            secretName: my-release-jupyterhub-hub
---
# Source: jupyterhub/templates/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: jupyterhub
    helm.sh/chart: jupyterhub-0.1.19
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: proxy
  name: my-release-jupyterhub-proxy
  namespace: "default"
spec:
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterhub
      app.kubernetes.io/instance: my-release
      app.kubernetes.io/component: proxy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyterhub
        helm.sh/chart: jupyterhub-0.1.19
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: proxy
        hub.jupyter.org/network-access-hub: "true"
        hub.jupyter.org/network-access-singleuser: "true"
    spec:
      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: jupyterhub
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: proxy
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      containers:
        - name: proxy
          image: docker.io/bitnami/configurable-http-proxy:4.5.0-debian-10-r65
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          args:
            - configurable-http-proxy
            - "--ip=::"
            - "--api-ip=::"
            - --api-port=8001
            - --default-target=http://my-release-jupyterhub-hub:8081
            - --error-target=http://my-release-jupyterhub-hub:8081/hub/error
            - --port=8000
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
            - name: api
              containerPort: 8001
              protocol: TCP
          resources:
            limits: {}
            requests: {}
          startupProbe:
            httpGet:
              path: /_chp_healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /_chp_healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /_chp_healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 30
          volumeMounts:
---
# Source: jupyterhub/charts/postgresql/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: my-release-postgresql
  labels:
    app.kubernetes.io/name: postgresql
    helm.sh/chart: postgresql-10.12.0
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: primary
  annotations:
  namespace: default
spec:
  serviceName: my-release-postgresql-headless
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: my-release
      role: primary
  template:
    metadata:
      name: my-release-postgresql
      labels:
        app.kubernetes.io/name: postgresql
        helm.sh/chart: postgresql-10.12.0
        app.kubernetes.io/instance: my-release
        app.kubernetes.io/managed-by: Helm
        role: primary
        app.kubernetes.io/component: primary
    spec:      
      affinity:
        podAffinity:
          
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app.kubernetes.io/name: postgresql
                    app.kubernetes.io/instance: my-release
                    app.kubernetes.io/component: primary
                namespaces:
                  - "default"
                topologyKey: kubernetes.io/hostname
              weight: 1
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
      automountServiceAccountToken: false
      containers:
        - name: my-release-postgresql
          image: docker.io/bitnami/postgresql:11.13.0-debian-10-r40
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
          securityContext:
            runAsUser: 1001
          ports:
            - name: tcp-postgresql
              containerPort: 5432
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "bn_jupyterhub" -d "dbname=bitnami_jupyterhub" -h 127.0.0.1 -p 5432
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "bn_jupyterhub" -d "dbname=bitnami_jupyterhub" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: data
              mountPath: /bitnami/postgresql
              subPath: 
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "8Gi"
